--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -59,6 +59,7 @@ bAuthorizeAutomaticWidgetVariableCreation=False
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/Aura")
 AssetManagerClassName=/Script/Aura.AuraAssetManager
 bUseFixedFrameRate=True
+bSmoothFrameRate=False
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
